--- a/css/utilities.css
+++ b/css/utilities.css
@@ -28,6 +28,40 @@
     background-color: var(--primary-color);
     color: #fff;
 }
+
+.bg-dark,
+.btn-dark {
+    background-color: var(--dark-color);
+    color: #fff;
+}
+
+.bg-light,
+.btn-light {
+    background-color: var(--light-color);
+    color: #fff;
+}
+
+/* text sizes */
+.lead {
+    font-size: 20px;
+
+}
+
+.sm {
+    font-size: 1rem;
+}
+
+.md {
+    font-size: 2rem;
+}
+
+.lg {
+    font-size: 3rem;
+}
+
+.xl {
+    font-size: 4rem;
+}
 .container {
     max-width: 1100px;
     margin: 0 auto;
