--- a/css/utilities.css
+++ b/css/utilities.css
@@ -41,6 +41,17 @@
     color: #fff;
 }
 
+.bg-primary a,
+.btn-primary a,
+.bg-secondary a,
+.btn-secondary a,
+.bg-dark a,
+.btn-dark a {
+    color: #fff;
+}
+
+
+
 /* text sizes */
 .lead {
     font-size: 20px;
