--- a/css/utilities.css
+++ b/css/utilities.css
@@ -38,7 +38,7 @@
 .bg-light,
 .btn-light {
     background-color: var(--light-color);
-    color: #fff;
+    color: #333;
 }
 
 .bg-primary a,
@@ -50,8 +50,22 @@
     color: #fff;
 }
 
-
-
+/* text color */
+.text-primary {
+    color: var(--primary-color);
+  }
+  
+  .text-secondary {
+    color: var(--secondary-color);
+  }
+  
+  .text-dark {
+    color: var(--dark-color);
+  }
+  
+  .text-light {
+    color: var(--light-color);
+  }
 /* text sizes */
 .lead {
     font-size: 20px;
@@ -82,9 +96,30 @@
 .text-center {
     text-align: center;
 }
+/* Alert */
+.alert {
+    background-color: var(--light-color);
+    padding: 10px 20px;
+    font-weight: bold;
+    margin: 15px 0px;
+}
+
+.alert i {
+    margin-right: 10px;
+}
+
+.alert-success {
+    background-color: var(--success--color);
+    color: #fff;
+}
+
+.alert-error {
+    background-color: var(--error--color);
+    color: #fff;
+}
 .flex {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 100%;
 }
